--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,21 @@ spring:
     url: jdbc:mysql://localhost:3306/facebook
     username: root
     password: koreait
+  mail:
+    host: smtp.naver.com
+    port: 587
+    username: kimsw3445@naver.com
+    password: qksksk3538
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          ssl:
+            trust: smtp.naver.com
+            protocols: TLSv1.2
 
-#mybatis:
-#  mapper-locations: mapper/**/*.xml
-#  type-aliases-package: com.example.fbt.dao
+mybatis:
+  mapper-locations: mapper/**/*.xml
+  type-aliases-package: com.example.fbt.model
